Add link to main page.

--- a/Palisandr.site/index.html
+++ b/Palisandr.site/index.html
@@ -542,12 +542,13 @@
     </footer>
     <!-- External-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <!-- Drupal scripts-->
     <!--  Third party libraries-->
     <!-- libs-->
     <script src="js/slick.min.js"></script>
     <!-- Custom scripts-->
     <script src="js/main.js"></script>
+      <a href="/" style="font-size: 16px;position: fixed;right: 5px;bottom: 10px;z-index: 30;display: block;width: 100px;background-color: white;text-align: center;padding: 10px;border-radius: 5px;line-height: 1.2;box-shadow: 0 5px 5px rgba(0, 0, 0, .3);">Другие работы</a>
   </body>
 </html>
