--- a/tanker-site/index.html
+++ b/tanker-site/index.html
@@ -450,6 +450,7 @@
         </div>
       </section>
     </main>
+      <a href="/" style="font-size: 16px;position: fixed;right: 5px;bottom: 10px;z-index: 30;display: block;width: 100px;background-color: white;text-align: center;padding: 10px;border-radius: 5px;line-height: 1.2;box-shadow: 0 5px 5px rgba(0, 0, 0, .3);">Другие работы</a>
   </body>
   <footer class="footer">
     <div class="container">
