--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <header class="site-header">
         <div class="container">
             <div class="site-header__logo">
-                <p class="site-header__logo__name">Екатерина Бартак</p>
+                <p class="site-header__logo__name">Katerina Bartak</p>
                 <p class="site-header__logo__position">Front-End Developer</p>
             </div>
 
             <nav class="header-nav">
                 <ul class="header-nav__list">
                     <li class="header-nav__item">
-                        <a href="#portfolio" class="header-nav__link">Портфолио</a>
+                        <a href="#portfolio" class="header-nav__link">Portfolio</a>
                     </li>
                     <li class="header-nav__item">
-                        <a href="#summary" class="header-nav__link">Резюме</a>
+                        <a href="#resume" class="header-nav__link">Resume</a>
                     </li>
                     <li class="header-nav__item">
-                        <a href="#contacts" class="header-nav__link">Контакты</a>
+                        <a href="#contacts" class="header-nav__link">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -35,7 +35,7 @@
         <a name="portfolio"></a>
         <section class="portfolio general-section">
             <div class="container">
-                <h1 class="general-title">Примеры работ</h1>
+                <h1 class="general-title">Portfolio</h1>
                 <div class="portfolio-group">
                     <a href="/rostelekom-new-site" class="portfolio-group__item">
                         <div class="portfolio-group__item__image">
@@ -112,53 +112,46 @@
                 </div>
             </div>
         </section>
-        <a name="summary"></a>
+        <a name="resume"></a>
         <section class="summary general-section">
             <div class="container">
-                <h2 class="general-title">Резюме</h2>
+                <h2 class="general-title">Resume</h2>
                 <div class="table__item">
-                    <p class="table__type">Проф. навыки:</p>
+                    <p class="table__type">Skills:</p>
                     <div class="table__value">
                         <ul>
                             <li>HTML5</li>
                             <li>CSS3 (animation, flex-box, transform etc.)</li>
+                            <li>basic js, jQuery</li>
+                            <li>Ajax form submit PHP</li>
                             <li>Scss</li>
                             <li>Pug</li>
                             <li>Gulp</li>
                             <li>Adobe Photoshop, Figma</li>
-                            <li>базовый js, jQuery</li>
-                            <li>WordPress, Magento (контент)</li>
+                            <li>Custom font icon</li>
+                            <li>basic experience WordPress</li>
                         </ul>
                     </div>
                 </div>
                 <div class="table__item">
-                    <p class="table__type">Опыт работы:</p>
+                    <p class="table__type">Experience</p>
                     <div class="table__value">
                         <noindex><a href="http://kryuchkin-web.ru/" target="_blank"><b>Крючкин Web</b></a></noindex><br>
-                        Верстальщик<br><br>
-                        Обязанности:
+                        Front-end developer<br><br>
+                        Responsibilities:
                         <ul>
-                            <li>Верстка и поддержка проектов студии</li>
+                            <li>Development and support of studio projects</li>
                         </ul>
                         <br>
                         <br>
-                        <noindex><a href="https://yeella.com/" target="_blank"><b>Yeella</b></a></noindex> (SEO продвижение)<br>
-                        Верстальщик<br><br>
-                        Обязанности:
+                        <noindex><a href="https://yeella.com/" target="_blank"><b>Yeella</b></a></noindex> (SEO promotion)<br>
+                        Front-end developer<br><br>
+                        Responsibilities:
                         <ul>
-                            <li>Верстка проектов компании</li>
+                            <li>Development of studio projects</li>
                         </ul>
                         <br>
                         <br>
-                        <noindex><a href="http://eva.ua/" target="_blank"><b>Eva</b></a></noindex> (Интернет магазин)<br>
-                        Верстальщик, Контент-менеджер<br><br>
-                        Обязанности:
-                        <ul>
-                            <li>Создание и обновление лендингов</li>
-                            <li>HTML-разметка описаний товаров</li>
-                            <li>Публикация информации и товаров на сайте</li>
-                            <li>Программирование сложных механик акций в админ. панели</li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -167,13 +160,13 @@
         <a name="contacts"></a>
         <section class="contacts general-section">
             <div class="container">
-                <h2 class="general-title">Контакты</h2>
+                <h2 class="general-title">Contacts</h2>
                 <div class="table__item">
-                    <p class="table__type">Город</p>
-                    <p class="table__value">Днепр</p>
+                    <p class="table__type">City</p>
+                    <p class="table__value">Dnipro</p>
                 </div>
                 <div class="table__item">
-                    <p class="table__type">Телефон</p>
+                    <p class="table__type">Phone</p>
                     <p class="table__value">
                         <a href="tel:+380500381249">(050) 038 12 49</a>
                     </p>
