one more element list

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                             <li>Scss</li>
                             <li>Pug</li>
                             <li>Gulp</li>
+                            <li>Pixel Perfect</li>
                             <li>Adobe Photoshop, Figma</li>
                             <li>Custom font icon</li>
                             <li>basic experience WordPress</li>
