Add divorcio project.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
                 <div class="portfolio-group">
                     <div class="portfolio-group__item">
                         <div class="portfolio-group__item__image">
+                            <img src="divorcio/preview.png" alt="Divorcio" class="portfolio-group__item__img">
+                            <div class="portfolio-group__item__links">
+                                <a href="https://github.com/katebartak/katebartak.github.io/tree/master/divorcio" class="portfolio-group__item__link">&lt;code&gt;</a>
+                                <a href="/divorcio" class="portfolio-group__item__link">&lt;prototype&gt;</a>
+                            </div>
+                        </div>
+                        <p class="portfolio-group__item__name">Divorcio</p>
+                    </div>
+                    <div class="portfolio-group__item">
+                        <div class="portfolio-group__item__image">
                             <img src="titan-site/preview.png" alt="Титан" class="portfolio-group__item__img">
                             <div class="portfolio-group__item__links">
                                 <a href="https://github.com/katebartak/katebartak.github.io/tree/master/titan-site" class="portfolio-group__item__link">&lt;code&gt;</a>
