--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                             <div class="portfolio-group__item__links">
                                 <a href="https://github.com/katebartak/katebartak.github.io/tree/master/ecodecor" class="portfolio-group__item__link">&lt;code&gt;</a>
                                 <a href="/ecodecor" class="portfolio-group__item__link">&lt;prototype&gt;</a>
+                                <a href="http://l.ecodecor.by/" class="portfolio-group__item__link">&lt;link&gt;</a>
                             </div>
                         </div>
-                        <p class="portfolio-group__item__name">Divorcio</p>
+                        <p class="portfolio-group__item__name">Ecodecor</p>
                     </div>
                     <div class="portfolio-group__item">
                         <div class="portfolio-group__item__image">
@@ -63,6 +64,7 @@
                             <div class="portfolio-group__item__links">
                                 <a href="https://github.com/katebartak/katebartak.github.io/tree/master/titan-site" class="portfolio-group__item__link">&lt;code&gt;</a>
                                 <a href="/titan-site" class="portfolio-group__item__link">&lt;prototype&gt;</a>
+                                <a href="https://www.titan-lift.ru/" class="portfolio-group__item__link">&lt;link&gt;</a>
                             </div>
                         </div>
                         <p class="portfolio-group__item__name">Титан</p>
