--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <a href="/axel-medical" class="portfolio-group__item__link">&lt;prototype&gt;</a>
                             </div>
                         </div>
-                        <p class="portfolio-group__item__name">Charrycoin</p>
+                        <p class="portfolio-group__item__name">Axel Medical</p>
                     </div>
                     <div class="portfolio-group__item">
                         <div class="portfolio-group__item__image">
