--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <a href="/at-market" class="portfolio-group__item__link">&lt;prototype&gt;</a>
                             </div>
                         </div>
-                        <p class="portfolio-group__item__name">Axel Medical</p>
+                        <p class="portfolio-group__item__name">AT Market</p>
                     </div>
                     <div class="portfolio-group__item">
                         <div class="portfolio-group__item__image">
@@ -55,7 +55,7 @@
                                 <a href="/mebo" class="portfolio-group__item__link">&lt;prototype&gt;</a>
                             </div>
                         </div>
-                        <p class="portfolio-group__item__name">Axel Medical</p>
+                        <p class="portfolio-group__item__name">Mebo</p>
                     </div>
                     <div class="portfolio-group__item">
                         <div class="portfolio-group__item__image">
